--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,12 +4,12 @@ skip_branch_with_pr: false
 
 install:
 - set PATH=C:\Python37-x64\scripts;C:\Python37-x64;%PATH%
-- pip install tox
+- pip install 'tox>=4'
 - git config core.symlinks true
 - git reset --hard
 
 build_script:
 # configured in tox.ini
-- tox -e pep8,docs
-- tox -e cov tests
-- tox -e py37 integration-tests
+- tox run -e pep8,docs
+- tox run -e cov -- tests
+- tox run -e py37 -- integration-tests
