Update to concrete 4.17.

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ exclude =
     concrete/clustering/*,
     concrete/communication/*,
     concrete/context/*,
+    concrete/convert/*,
     concrete/email/*,
     concrete/entities/*,
     concrete/exceptions/*,
@@ -24,6 +25,7 @@ exclude =
     concrete/linking/*,
     concrete/metadata/*,
     concrete/nitf/*,
+    concrete/property/*,
     concrete/search/*,
     concrete/services/*,
     concrete/situations/*,
