--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ version: '{build}-{branch}'
 skip_branch_with_pr: false
 
 install:
-- set PATH=C:\Python37-x64\scripts;C:\Python37-x64;%PATH%
+- set PATH=C:\Python38-x64\scripts;C:\Python38-x64;%PATH%
 - pip install 'tox>=4'
 - git config core.symlinks true
 - git reset --hard
@@ -12,4 +12,4 @@ build_script:
 # configured in tox.ini
 - tox run -e pep8,docs
 - tox run -e cov -- tests
-- tox run -e py37 -- integration-tests
+- tox run -e py -- integration-tests
