--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ setenv =
 [testenv:cov]
 deps = -r{toxinidir}/test-requirements.txt
 commands =
-    pytest --cov=concrete {posargs:tests} --cov-report=xml:{toxinidir}/coverage.xml
+    pytest --cov=concrete --cov-report=xml:{toxinidir}/coverage.xml --cov-report=term {posargs:tests}
 setenv =
     PYTHONPATH = {toxinidir}
 
