try adding build script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,14 +5,10 @@ image:
 
 environment:
   matrix:
-  # - TOXENV: py27  # end-of-life-branches
-  # - TOXENV: py35
-  # - TOXENV: py36
-  # - TOXENV: py37
-  - TOXENV: py38    # https://devguide.python.org/versions
-  - TOXENV: py39
-  - TOXENV: py310
-  - TOXENV: py311
+    - TOXENV: py38
+    - TOXENV: py39
+    - TOXENV: py310
+    - TOXENV: py311
 
 build: false
 
@@ -21,5 +17,8 @@ install:
   # - py -m pip install --upgrade pip
   - py -m pip install tox
 
+build_script:
+  - echo help
+
 test_script:
-  - py -m tox
+  - py -m tox run -e pep8,py
